--- a/src/app/demo/components/landing/Hackathon/landing-hackathon-details/landing-hackathon-details.component.html
+++ b/src/app/demo/components/landing/Hackathon/landing-hackathon-details/landing-hackathon-details.component.html
@@ -74,6 +74,16 @@
               </a>
           </li>
 
+          <li>
+            <a (click)="router.navigate(['/landing/team-submission'])" pRipple class="flex m-0 md:ml-5 px-0 py-3 text-900 font-medium line-height-3">
+                <span>Team Submission</span>
+            </a>
+        </li>
+        <li>
+            <a (click)="router.navigate(['/landing/project-evaluation'])" pRipple class="flex m-0 md:ml-5 px-0 py-3 text-900 font-medium line-height-3">
+                <span>Project Evaluation</span>
+            </a>
+        </li>
 
       </ul>
       <div class="flex justify-content-between lg:flex-row lg:align-items-center border-top-1 lg:border-top-none surface-border py-3 lg:py-0 mt-3 lg:mt-0">
