--- a/src/app/layout/app.layout.component.html
+++ b/src/app/layout/app.layout.component.html
@@ -7,7 +7,7 @@
         <div class="layout-main">
             <router-outlet></router-outlet>
         </div>
-        <app-footer></app-footer>
+        <app-main-footer></app-main-footer>
     </div>
     <app-config></app-config>
     <div class="layout-mask"></div>
