--- a/src/app/demo/components/hackathons/hackathon-details/hackathon-details.component.html
+++ b/src/app/demo/components/hackathons/hackathon-details/hackathon-details.component.html
@@ -57,6 +57,16 @@
         <div class="stat-value">{{ h.teams.length }}</div>
         <div class="stat-label">Teams</div>
       </div>
+      <div class="stat-card">
+        <div class="stat-value">
+          <p-avatar [label]="h.createdBy.name.charAt(0) + h.createdBy.lastname.charAt(0)" 
+                   size="large" shape="circle"></p-avatar>
+        </div>
+        <div class="organizer-info">
+          <div class="stat-label">Organizer</div>
+          <div class="organizer-name">{{ h.createdBy.name }} {{ h.createdBy.lastname }}</div>
+        </div>
+      </div>
       
     </div>
 
@@ -89,6 +99,8 @@
         </div>
       </div>
     </div>
+
+    
   </div>
 </div>
 <!-- Posts Section with Scrollable Container -->
