--- a/src/app/demo/components/posts/post-list/post-list.component.html
+++ b/src/app/demo/components/posts/post-list/post-list.component.html
@@ -1,59 +1,72 @@
+<div *ngIf="loading" class="loading-container">
+  <p-progressSpinner [style]="{width: '50px', height: '50px'}" styleClass="custom-spinner"></p-progressSpinner>
+  <span>Loading user data...</span>
+</div>
+
+<div *ngIf="!loading && !currentUser" class="login-reminder">
+  <p>Please log in to interact with posts</p>
+</div>
+
 <div class="post-feed">
   <div *ngFor="let post of posts" class="post-card">
-   <div class="post-header">
-     <img [src]="post.postedBy?.picture || 'assets/default-avatar.png'"
-          class="avatar"
-          alt="Profile picture">
-     <div class="user-info">
-       <h3>{{ post.postedBy?.name }} {{ post.postedBy?.lastname }}</h3>
-       <span class="post-meta">
-         {{ post.createdAt | date:'mediumDate' }}
-         <span *ngIf="post.hackathon?.title"> • {{ post.hackathon.title }}</span>
-       </span>
-     </div>
-     <div class="post-actions" *ngIf="post.postedBy?.id === currentUserId">
-       <button pButton icon="pi pi-pencil" class="p-button-text" (click)="editPost(post)"></button>
-       <button pButton icon="pi pi-trash" class="p-button-text p-button-danger" (click)="confirmDelete(post)"></button>
-     </div>
-   </div>
- 
-     <div class="post-content">
-       <h2>{{ post.title }}</h2>
-       <p>{{ post.content }}</p>
-       
-       <div *ngIf="post.images?.length" class="post-images">
-         <img *ngFor="let image of post.images" [src]="image" alt="Post image">
-       </div>
-     </div>
- 
-     <div class="post-stats">
-       <button (click)="onLikePost(post)" 
-               [class.active]="isPostLikedByCurrentUser(post)">
-         <i class="pi pi-heart"></i> {{ post.likes?.length || 0 }}
-       </button>
-       <button>
-         <i class="pi pi-comment"></i> {{ post.comments?.length || 0 }}
-       </button>
-     </div>
- 
-     <app-comment-list 
-       [post]="post"
-       [currentUserId]="currentUserId"
-       (commentAdded)="onCommentAdded(post, $event)">
-     </app-comment-list>
- </div>
+    <div class="post-header">
+      <img [src]="post.postedBy?.picture ? getImageUrl(post.postedBy.picture) : 'assets/images/default-avatar.png'"
+      class="avatar"
+      alt="Profile picture"
+      (error)="handleImageError($event, true)">
+      <div class="user-info">
+        <h3>{{ post.postedBy?.name }} {{ post.postedBy?.lastname }}</h3>
+        <span class="post-meta">
+          {{ post.createdAt | date:'mediumDate' }}
+          <span *ngIf="post.hackathon?.title"> • {{ post.hackathon.title }}</span>
+        </span>
+      </div>
+      <div class="post-actions" *ngIf="canManagePost(post)">
+        <button pButton icon="pi pi-pencil" class="p-button-text" (click)="editPost(post)"></button>
+        <button pButton icon="pi pi-trash" class="p-button-text p-button-danger" (click)="confirmDelete(post)"></button>
+      </div>
+    </div>
+
+
+  
+    <div *ngIf="post.images?.length" class="post-images">
+      <img *ngFor="let image of post.images" [src]="getImageUrl(image)" 
+           alt="Post image" 
+           (error)="handleImageError($event, false)">
+    </div>
+  
+    <div class="post-stats">
+      <button (click)="onLikePost(post)" 
+              [class.active]="isPostLikedByCurrentUser(post)"
+              [disabled]="!currentUser">
+        <i class="pi pi-heart"></i> {{ post.likes?.length || 0 }}
+      </button>
+      <button>
+        <i class="pi pi-comment"></i> {{ post.comments?.length || 0 }}
+      </button>
+    </div>
+  
+    <app-comment-list 
+      [post]="post"
+      (commentAdded)="onCommentAdded(post, $event)">
+    </app-comment-list>
+  </div>
+
+  <div *ngIf="posts.length === 0 && !loading" class="no-posts-message">
+    <p>No posts found for this hackathon</p>
+  </div>
 </div>
 
 <p-sidebar [(visible)]="editSidebarVisible" position="right" [baseZIndex]="10000" styleClass="p-sidebar-md">
- <h3>Edit Post</h3>
- <app-post-form 
-   *ngIf="selectedPost"
-   [hackathon]="selectedPost.hackathon"
-   [isEditMode]="true"
-   [postToEdit]="selectedPost"
-   (postCreated)="onPostUpdated()"
-   (cancel)="closeEditSidebar()">
- </app-post-form>
+  <h3>Edit Post</h3>
+  <app-post-form 
+    *ngIf="selectedPost"
+    [hackathon]="selectedPost.hackathon"
+    [isEditMode]="true"
+    [postToEdit]="selectedPost"
+    (postCreated)="onPostUpdated()"
+    (cancel)="closeEditSidebar()">
+  </app-post-form>
 </p-sidebar>
 
 <!-- Add confirmation dialog for delete -->
