--- a/src/app/demo/components/landing/Hackathon/landing-hackathon-details/landing-hackathon-details.component.html
+++ b/src/app/demo/components/landing/Hackathon/landing-hackathon-details/landing-hackathon-details.component.html
@@ -56,11 +56,7 @@
                   <span>Evaluate</span>
               </a>
           </li>
-          <li>
-              <a [routerLink]="['/mentor-form']" pRipple class="flex m-0 md:ml-5 px-0 py-3 text-900 font-medium line-height-3">
-                  <span>Participate</span>
-              </a>
-          </li>
+
 
           <li>
               <a [routerLink]="['/mentor-evaluations-user']" pRipple class="flex m-0 md:ml-5 px-0 py-3 text-900 font-medium line-height-3">
@@ -115,9 +111,19 @@
             class="p-button-success header-button"
             (click)="addPrize(hackathon?.id)">
     </button>
+    <button 
+    pButton 
+    pRipple 
+    type="button" 
+    [label]="isAlreadyMentor ? 'Update Mentor Application' : 'Join as Mentor'" 
+    [icon]="isAlreadyMentor ? 'pi pi-pencil' : 'pi pi-user-plus'" 
+    [class]="isAlreadyMentor ? 'p-button-info' : 'p-button-success'"
+    (click)="applyAsMentor()" 
+    *ngIf="hackathon && user"
+  ></button>
   </div>
 </div>
-
+<p-toast></p-toast>
 
 <div *ngIf="hackathon as h" class="hackathon-details-container">
     <!-- Hero Section with Gradient Overlay -->
